--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,15 @@
-name: 'build-test'
-on: # rebuild any PRs and main branch changes
-  pull_request:
-  push:
-    branches:
-      - main
-      - 'releases/*'
+on: [pull_request]
+
+name: Test
 
 jobs:
-  build: # make sure build/ci work properly
+  check:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: |
-          npm install
-      - run: |
-          npm run all
-  test: # make sure the action works on a clean machine without building
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./
-        with:
-          stack-name: MyStackName
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Run tests
+        run: |
+          npm ci
+          npm test
